--- a/Install.txt
+++ b/Install.txt
@@ -30,3 +30,16 @@ $ ssh-add ~/.ssh/id_rsa
 $ cat ~/.ssh/id_rsa.pub
 
 Добавьте ssh-ключ в аккаунт Github. При добавлении вас попросят назвать ключ. Напишите что-нибудь в стиле home.
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+Создайте репозиторий на Гитхабе. Назовите его hexlet-git. Важно, чтобы репозиторий создавался пустым,
+поэтому не отмечайте галочки, добавляющие файлы.
+# Подробнее эти команды мы разберём позже
+hexlet-git$ git branch -M main
+hexlet-git$ git remote add origin git@github.com:<ИМЯ НА ГИТХАБЕ>/hexlet-git.git
+hexlet-git$ git push -u origin main
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+Клонирование
+$ git clone git@github.com:<ИМЯ НА ГИТХАБЕ>/hexlet-git.git
+$ cd hexlet-git
+$ ls -la
